# LastTaskYB

./: 1.cpp  CMakeLists.txt  README.md  Versions  comparison.h  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  database_add_date_event_test.cpp  date.cpp  date.h  date_comparing_test.cpp  date_conversion.cpp  date_event.cpp  date_event.h  date_parser.cpp  date_parser_test.cpp  list_of_events.cpp  list_of_events.h  list_of_events_tests.cpp  logical_operation.h  main.cpp  node.cpp  node.h  test_db_all.cpp  test_runner.cpp  test_runner.h  token.cpp
